tests/ui/empty_enum.stderr
error: there must be at least one variant
 --> tests/ui/empty_enum.rs:3:10
  |
3 | #[derive(Serialize_repr_clamp)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize_repr_clamp` (in Nightly builds, run with -Z macro-backtrace for more info)
