tests/ui/empty_enum.rs
use serde_repr_plus::Serialize_repr_clamp;

#[derive(Serialize_repr_clamp)]
enum SmallPrime {}

fn main() {}
